--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -75,6 +75,7 @@ target_link_libraries(rlimgui PUBLIC imgui raylib)
 # --- Source Files ---
 ADD_LIBRARY(${PROJECT_NAME} SHARED
     "Engine/Application.cpp"
+    "Engine/Layer.cpp"
 )
 
 # --- Includes ---
